Changes to data fetcher to reduce number of requests.